# Monopoly

./: .gitignore  CMakeLists.txt  Monopoly.md  Monopoly_zh.md  README.md
conf/: buildings.json  cards.json  rules.json  skills.json
src/: card.cpp  card.h  config.cpp  config.h  game.cpp  game.h  main.cpp  player.cpp  player.h  skill.cpp  skill.h  world.cpp  world.h
